[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/weapon/Ennemies/projectiles/MiniCanonBall.png" type="Texture" id=1]
[ext_resource path="res://scenes/weapons/Ennemys/Projectiles/MiniCanonBall.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.29416

[node name="MiniCanonBall" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_MiniCanonBall_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_MiniCanonBall_body_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
